Updated Delete Functions
Cascade deletes all related data when deleting any specific element. Also updates the selecedScheduleId to make sure it doesn't point to a deleted schedule.

--- a/index.html
+++ b/index.html
@@ -1025,9 +1025,33 @@ function deletePerson(id)
 {
 	if (confirm('Are you sure you want to delete this person?')) {
 		data.people = data.people.filter(p => p.id !== id);
+		data.applications = data.applications.filter(a => a.headOfHouseholdId !== id);
+		data.householdMembers = data.householdMembers.filter(h => h.personId !== id);
+		data.activities.filter(a => a.personId == id).forEach(e => {
+			if(selectedScheduleId === e.scheduleId)
+			{
+				selectedScheduleId = null;
+			}
+			data.schedules = data.schedules.filter(s => s.id !== e.scheduleId);
+			});
+		data.activities = data.activities.filter(a => a.personId !== id);
+		data.providerLinks.filter(p => p.personId == id).forEach(l => {
+			if(selectedScheduleId === l.scheduleId)
+			{
+				selectedScheduleId = null;
+			}
+			data.schedules = data.schedules.filter(s => s.id !== l.scheduleId);
+			});
+		data.providerLinks = data.providerLinks.filter(p => p.persionId !== id);
+		if(data.activeApplicationId !== null)
+		{
+			if(!data.applications.find(a => Number(a.id) === Number(data.activeApplicationId)))
+			{
+				data.activeApplicationId = null;
+			}
+		}
 		saveData();
-		refreshPeopleList();
-		refreshApplicationsList();
+		refreshAll();
 	}
 }
 
@@ -1104,8 +1128,17 @@ function deleteProvider(id)
 {
 	if (confirm('Are you sure you want to delete this provider?')) {
 		data.providers = data.providers.filter(p => p.id !== id);
+		data.providerLinks.filter(p => p.providerId == id).forEach(l => {
+			if(selectedScheduleId === l.scheduleId)
+			{
+				selectedScheduleId = null;
+			}
+			data.schedules = data.schedules.filter(s => s.id !== l.scheduleId);
+			});
+		data.providerLinks = data.providerLinks.filter(p => p.providerId !== id);
+		
 		saveData();
-		refreshProvidersList();
+		refreshAll();
 	}
 }
 
@@ -1163,17 +1196,38 @@ function addApplication()
 
 function deleteApplication(id) 
 {
-	if (confirm('Are you sure you want to delete this application?')) {
+	if (confirm('Are you sure you want to delete this application?')) 
+	{
 		data.applications = data.applications.filter(a => a.id !== id);
 		// Clean up related data
+		const myHouseholdMembers = data.householdMembers.filter(m => m.applicationId == id);
+		// Remove the schedules for all the activities and providerLinks
+		myHouseholdMembers.forEach(m => {
+			data.activities.filter(a => a.personId == m.personId && m.applicationId == id).forEach(e => {
+			if(selectedScheduleId === e.scheduleId)
+			{
+				selectedScheduleId = null;
+			}
+			data.schedules = data.schedules.filter(s => s.id !== e.scheduleId);
+			});
+			data.providerLinks.filter(p => p.personId == m.personId && m.applicationId == id).forEach(l => {
+			if(selectedScheduleId === l.scheduleId)
+			{
+				selectedScheduleId = null;
+			}
+			data.schedules = data.schedules.filter(s => s.id !== l.scheduleId);
+			});
+		});
+		
 		data.householdMembers = data.householdMembers.filter(h => h.applicationId !== id);
 		data.activities = data.activities.filter(a => a.applicationId !== id);
 		data.providerLinks = data.providerLinks.filter(p => p.applicationId !== id);
 		
-		if (data.activeApplicationId == id) {
+		if (data.activeApplicationId == id) 
+		{
 			data.activeApplicationId = null;
 		}
-		
+		selectedScheduleId = null;
 		saveData();
 		refreshApplicationsList();
 		refreshHouseholdForm();
@@ -1186,6 +1240,7 @@ function deleteApplication(id)
 function setActiveApplication(id) 
 {
 	data.activeApplicationId = id;
+	selectedScheduleId = null;
 	saveData();
 	refreshApplicationsList();
 	refreshHouseholdForm();
@@ -1319,9 +1374,25 @@ function toggleIncluded(applicationId, personId)
 
 function deleteHouseholdMember(applicationId, personId) 
 {
-	if (confirm('Are you sure you want to remove this household member?')) {
+	if (confirm('Are you sure you want to remove this household member?')) 
+	{
 		data.householdMembers = data.householdMembers.filter(h => 
 			!(h.applicationId === applicationId && h.personId === personId));
+		data.activities.filter(a => a.personId == personId && a.applicationId == applicationId).forEach(e => {
+			if(selectedScheduleId === e.scheduleId)
+			{
+				selectedScheduleId = null;
+			}
+			data.schedules = data.schedules.filter(s => s.id !== e.scheduleId);
+			});
+			data.providerLinks.filter(p => p.personId == personId && p.applicationId == applicationId).forEach(l => {
+			if(selectedScheduleId === l.scheduleId)
+			{
+				selectedScheduleId = null;
+			}
+			data.schedules = data.schedules.filter(s => s.id !== l.scheduleId);
+			});
+		
 		saveData();
 		refreshHouseholdForm();
 		refreshHouseholdList();
@@ -1519,6 +1590,10 @@ function deleteActivity(id)
 			// Remove associated schedule
 			data.schedules = data.schedules.filter(s => s.id !== activity.scheduleId);
 		}
+		if(selectedScheduleId === activity.scheduleId)
+		{
+			selectedScheduleId = null;
+		}
 		data.activities = data.activities.filter(a => a.id !== id);
 		saveData();
 		refreshActivitiesList();
@@ -1705,6 +1780,10 @@ function deleteProviderLink(providerId, applicationId, personId, locCare)
 		if (link) {
 			// Remove associated schedule
 			data.schedules = data.schedules.filter(s => s.id !== link.scheduleId);
+			if(selectedScheduleId === link.scheduleId)
+			{
+				selectedScheduleId = null;
+			}
 			
 			// If this was the primary provider, make another one primary if available
 			if (link.primary === 'Y') {
@@ -4785,7 +4864,7 @@ function determineMonthlyAuthorizations(calculationResult, non9CodeRemain)
 			if(calculationResult.schoolAge && calculationResult.schoolOverlap)
 			{
 				myType += 'SchoolPT';
-				if(calculationResult.initSchoolPartDays > 0)
+				if((calculationResult.initSchoolPartDays > 0) && (calculationResult.initSchoolPartDays >= (calculationResult.initSchoolMFHalfDays - calculationResult.initSchoolPartDays)))
 				{
 					myType += 'Partial';
 				}
